--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
@@ -21,11 +23,17 @@
     "bootstrap": "^5.1.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-check-box": "^2.1.7",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.12.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
